--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,8 @@ pico_enable_stdio_usb(tarefa_u4_27jan 1)
 
 # Add the standard library to the build
 target_link_libraries(tarefa_u4_27jan
-        pico_stdlib)
+        pico_stdlib
+        hardware_pio)
 
 # Add the standard include files to the build
 target_include_directories(tarefa_u4_27jan PRIVATE
